# amazon_reviews_project

./: .gitignore  README.md  pyproject.toml
src/amazon_reviews_project/: clean.py  config.py  load_data.py  load_reviews.py  main.py  model.py  utils.py  vectorize.py
