[project]
name = "amazon-reviews-project"
version = "0.1.0"
description = ""
authors = [
    {name = "EdissonMC",email = "pattrick.adamss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]

[tool.poetry]
packages = [{include = "amazon_reviews_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
